--- a/css/main.css
+++ b/css/main.css
@@ -48,3 +48,16 @@ body {
 
 #enemies-area .charapter img{ box-shadow: 0px 0px 12px black; }
 #enemies-area .charapter .badge{ background-color: #202020; }
+
+
+@media (max-width: 576px) { 
+    .charapter {
+        padding: 10px 10px 0px 10px;
+        max-width: 120px;
+    }
+
+    .charapter img{
+        width: 100px;
+        height: 100px;
+    }
+}
