--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,13 @@ body {
 
 
 @media (max-width: 576px) { 
+
+    body {
+        padding-top: 30px;
+    }
+
+    #attack { margin-top: 0px; }
+
     .charapter {
         padding: 10px 10px 0px 10px;
         max-width: 120px;
